--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ p {
     font-size: 16px;
 }
 
+
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +60,7 @@ p {
     background-position: center;
 }
 
+/* Positions images */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,12 +71,14 @@ p {
     margin-left: 25px;
 }
 
+/* Splits service rows and side menu into 2 columns */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* Side Menu Benefits CSS */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,24 +90,26 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
 
-.benefit-lead, .benefit-brand, .benefit-cost, h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img, .benefit-brand img, .benefit-cost img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization, .social-media-marketing, .online-reputation-management {
+
+/* 3 Service Rows CSS */
+.services {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -112,13 +118,14 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img, h2, .online-reputation-management h2 {
+.services img, h2 {
     max-height: 200px;
     margin-bottom: 20px;
     font-size: 36px;
 }
 
 
+/* Footer */
 .footer {
     padding: 30px;
     clear: both;
