--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* General Styling */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -6,6 +7,15 @@
 
 body {
     background-color: #d9dcd6;
+}
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
 }
 
 /* Nav Bar CSS */
@@ -40,16 +50,6 @@ body {
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
-}
-
-/* Text & Link Styling */
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
 }
 
 /* Hero Section */
