--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ p {
     color: #ffffff;
 }
 
+/* Nav logo styling */
 .header h1 {
     display: inline-block;
     font-size: 48px;
@@ -35,7 +36,8 @@ p {
     color: #d9dcd6;
 }
 
-.header div {
+/* Page links styling */
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -43,11 +45,11 @@ p {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
